--- a/client/main.css
+++ b/client/main.css
@@ -8,7 +8,7 @@ body {
   top: 0;
   bottom: 0;
   left: 0;
-  right: 1;
+  right: 0;
   padding: 0;
   margin: 0;
 
@@ -100,4 +100,10 @@ li.nav-item a {
   width: 100%;
   padding-right: 0px;
   padding-left: 0px;
+}
+
+.nav-new {
+  width: 80%;
+  left: 0;
+  right: 0;
 }
